--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,9 +13,9 @@ services:
       - VIRTUAL_ENVIRONMENT=${VIRTUAL_ENVIRONMENT:-dev}
     command: >
       sh -c "if [ \"$$VIRTUAL_ENVIRONMENT\" = 'prod' ]; then
-              pnpm build:create && pnpm build:run && pnpm prisma generate;
+              pnpm build:create && pnpm build:run && pnpm prisma migrate deploy;
             else
-              pnpm dev && pnpm prisma generate;
+              pnpm dev && pnpm prisma migrate deploy;
             fi"
     depends_on:
       - postgres
@@ -28,3 +28,12 @@ services:
       POSTGRES_DB: db
     ports:
       - 5432:5432
+  pgadmin:
+    image: dpage/pgadmin4
+    ports:
+      - "5050:80"
+    depends_on:
+      - postgres
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=email@email.com
+      - PGADMIN_DEFAULT_PASSWORD=password@123
