--- a/app/package.json
+++ b/app/package.json
@@ -42,6 +42,7 @@
     "@prisma/client": "^6.14.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-list-endpoints": "^7.1.1",
     "jsonwebtoken": "^9.0.2",
     "zod": "^4.0.17"
   }
